<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="users"
            type="com.example.crudmvvm.models.UserModel" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/_1"
                android:textAlignment="center"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@{users.name}"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/tvNumber"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@{users.email}"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/tvName"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvCreatedAt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@{users.created_at}"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/tvEmail"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvUpdatedAt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@{users.updated_at}"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/tvCreatedAt"
                tools:ignore="MissingConstraints" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvUpdatedAt"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update"
                    android:layout_margin="10dp"
                    app:backgroundTint="@android:color/holo_blue_light"
                    tools:ignore="MissingConstraints"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btnDelete"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:layout_margin="10dp"
                    app:backgroundTint="@android:color/holo_red_dark"
                    app:layout_constraintStart_toEndOf="@id/btnUpdate"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</layout>